[feat] add validation